[Post] Source Editor - Resolved Issues

--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -500,25 +500,25 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
   Code completion은 아직 정확하지 않은 표현식을 완성하는 데 도움이 됩니다. import 되지 않은 modules의 유형을 찾아 식별하고 필요한 import를 자동으로 추가합니다. 주변 소스에 오류가 있어도 code completion은 여전히 ​​당신이 의미하는 바를 유추합니다. 유효하게 만드는 방법을 설명하는 message를 제공하는 동시에 원하는 completion을 제안합니다.
 
 ### Resolved Issues
-* Fixed an issue where URLs in comments with MARKs, TODOs, and FIXMEs weren’t clickable. (10488785)
+* `MARKs`, `TODOs` 및 `FIXMEs`가 포함된 comments의 URLs를 클릭할 수 없는 문제가 수정되었습니다. (10488785)
 
-* Fixed an issue where elements of array and dictionary literals in Objective-C were indented too far to the right. (15964664)
+* Objective-C에서 array 및 dictionary literals의 elements가 너무 오른쪽으로 들여쓰여 있는 문제가 수정되었습니다. (15964664)
 
-* Fixed an issue where a string literal wouldn’t auto-close when it wasn’t at the end of a line. (34433455) (FB5931169)
+* string literal이 end of a line가 아닐 때 auto-close 되지 않는 문제를 수정했습니다. (34433455) (FB5931169)
 
-* Fixed an issue where typing “///” to start a documentation comment would draw in the wrong font. (53331667)
+* documentation comment을 시작하기 위해 "///"를 입력하면 잘못된 font로 그려지는 문제가 수정되었습니다. (53331667)
 
-* Improved Swift code completion for argument labels after defaulted or variadic arguments. (60346573)
+* 기본 argument 또는 가변 argument 이후 argument labels에 대한 Swift code completion 기능이 향상되었습니다. (60346573)
 
-* Improved Swift code completion for argument labels in generic initializers. (64168588)
+* generic initializers의 argument labels에 대한 Swift code completion이 향상되었습니다. (64168588)
 
-* Fixed an issue where a newline inside a multiline string literal wouldn’t follow the indentation of the literal. (68076453)
+* multiline string literal 내의 newline이 literal의 들여쓰기를 따르지 않는 문제를 수정했습니다. (68076453)
 
-* Fixed an issue where the line number was drawn out-of-sync when presenting the find bar. (70554325)
+* find bar을 표시할 때 line number가 동기화되지 않은 상태로 그려지는 문제가 수정되었습니다. (70554325)
 
-* To improve access to the Vim Mode, Xcode replaced the Enable Vim key bindings preference with an Edit > Vim Mode menu item. (75491567)
+* Vim Mode에 대한 액세스를 개선하기 위해 Xcode는 Enable Vim key bindings 설정을 preference `Edit > Vim Mode` 메뉴 항목으로 대체했습니다. (75491567)
 
-* Xcode now supports changing the line wrapping preference on a per-editor basis. (79168822, 79428189) (FB9157365)
+* Xcode는 이제 editor별로 line wrapping preference 설정 변경을 지원합니다. (79168822, 79428189) (FB9157365)
 
 ## Static Analyzer
 ### New Features
