[Post] Static Analyzer

--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -522,7 +522,7 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 
 ## Static Analyzer
 ### New Features
-* The static analyzer now warns about assertions with side effects, infinite loops, and more cases of C++11 std::move misuse. (34520956)
+* static analyzer는 이제 side effects, infinite loops 및 더 많은 `C++11 std::move` 오용 사례에 대해 경고합니다. (34520956)
 
 ## StoreKit
 ### New Features
