--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -526,7 +526,7 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 
 ## StoreKit
 ### New Features
-* StoreKit Testing in Xcode supports comprehensive testing of in-app purchases built using StoreKit’s new modern Swift-based APIs. For more information about StoreKit 2, see StoreKit. (69846798)
+* Xcode의 StoreKit Testing은 StoreKit의 새로운 최신 Swift 기반 API를 사용하여 구축된 인앱 구매에 대한 포괄적인 테스트를 지원합니다. StoreKit 2에 대한 자세한 내용은 [<i class="fas fa-link"></i> StoreKit](https://developer.apple.com/documentation/storekit){:target="_blank"}을 참조하십시오. (69846798)
 
 ## Swift
 ### New Features
