[Post] Swift - New Features 추가

--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -8,7 +8,7 @@ toc: true
 toc_sticky: true
 toc_label: 목차
 tag: "Xcode"
-published : false
+<!--published : false-->
 depth:
   - title: "iOS"
     url: /ios/
@@ -18,8 +18,6 @@ depth:
     icon: "far fa-folder-open"
 ---
 구글 번역기로 돌린 번역입니다. 잘못된 오역이 있음을 주의하여 주세요.👀
-
-[<i class="fas fa-link"></i> Xcode 13 소개 페이지](https://developer.apple.com/kr/xcode/){:target="_blank"}
 
 # Xcode 13
 Xcode 13에는 Swift 5.5와 iOS 15, iPadOS 15, macOS Monterey, tvOS 15, watchOS 8용 SDK가 포함되어 있습니다.
@@ -530,9 +528,9 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
 
 ## Swift
 ### New Features
-* Swift now natively supports concurrency programming using async/await and actors. For more information, see What’s new in Swift, Meet async/await in Swift, and Explore structured concurrency in Swift. (SE-0296, SE-0306, 21398040, 78028712, 78029422)
+* 이제 Swift는 async/await 및 actors를 사용하여 concurrency programming을 기본적으로 지원합니다. 자세한 내용은 [<i class="fas fa-link"></i> What’s new in Swift](https://developer.apple.com/wwdc21/10192){:target="_blank"}, [<i class="fas fa-link"></i> Meet async/await in Swift](https://developer.apple.com/wwdc21/10132){:target="_blank"} 및 [<i class="fas fa-link"></i> Explore structured concurrency in Swift](https://developer.apple.com/wwdc21/10134){:target="_blank"}를 참조하세요. ([<i class="fas fa-link"></i> SE-0296](https://github.com/apple/swift-evolution/blob/main/proposals/0296-async-await.md){:target="_blank"}, [<i class="fas fa-link"></i> SE-0306](https://github.com/apple/swift-evolution/blob/main/proposals/0306-actors.md){:target="_blank"}, 21398040, 78028712, 78029422)
 
-* Functions and properties that should only be accessed from the main thread can be placed on the main actor by annotating them with the @MainActor attribute. When calling a main-actor function, the call must come from a context that is itself on the main actor, or the call must be asynchronous. (70101562)
+* main thread에서만 접근해야 하는 Functions와 properties는 [<i class="fas fa-link"></i> @MainActor](https://developer.apple.com/documentation/swift/mainactor){:target="_blank"} attribute로 annotating을 달아 main actor에 배치할 수 있습니다. main actor function를 호출할 때 호출은 main actor 자체에 있는 context에서 호출되거나 asynchronous call 이어야 합니다. (70101562)
 
   For example:
   ```swift
@@ -543,18 +541,18 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
   }
 
   func h() async {
-    f()            // Error: You can't synchronously call f(), because h() isn't on the main actor.
-    await f()  // OK: Swift executes the asynchronous call to f() on the main actor.
+    f()            // Error: h()가 main actor가 아니기 때문에 f()를 sync call을 할 수 없습니다.
+    await f()  // OK: Swift는 main actor에서 f()를 async call을 실행합니다.
   }
   ```
-  Types can be placed on the main actor, which implies that all of their members are also on the main actor:
+  Types는 main actor에 배치할 수 있으며, 이는 모든 members도 main actor에 배치됨을 의미합니다:
   ```swift
   @MainActor class MyViewController: UIViewController {
-    func method() { } // This method is implicitly on @MainActor.
+    func method() { } // 이 메서드는 암시적(implicitly)으로 @MainActor에 있습니다.
 
   }
   ```
-* Asynchronous functions can create concurrently executing child tasks with async let bindings. The child task begins at the point that the parent declares the async let, and the variables the async let declares await at the point where they’re used. The async let waits until the child task completes and returns a value. (70101851)
+* 비동기 함수는 `async let` bindings을 사용하여 concurrently executing child tasks 을 만들 수 있습니다. child task은 부모가 `async let`을 선언하는 지점에서 시작하고 `async let`이 선언한 변수는 사용되는 지점에서 기다립니다. `async let`은 `child task`가 완료될 때까지 기다렸다가 return value 합니다. (70101851)
 
   For example:
   ```swift
@@ -571,40 +569,40 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
     return try await oven.cook(dish, duration: .hours(3))
   }
   ```
-  All child tasks complete before the scope in which they are declared exits.
+  모든 child tasks는 선언된 scope가 종료되기 전에 완료됩니다.
 
-* The “for” loop can be used to traverse asynchronous sequences in asynchronous code. (SE-0298, 78027927)
+* "for" 루프는 asynchronous code에서 asynchronous sequences를 탐색하는 데 사용할 수 있습니다. ([<i class="fas fa-link"></i> SE-0298](https://github.com/apple/swift-evolution/blob/main/proposals/0298-asyncsequence.md){:target="_blank"}, 78027927)
     ```swift
   for try await line in myFile.lines() {
     // Do something with each line
   }
   ```
-  Asynchronous for loops use asynchronous sequences, defined by the protocol AsyncSequence and its corresponding AsyncIterator.
+  Asynchronous for loops는 protocol인 `AsyncSequence` 및 해당 `AsyncIterator`에 의해 정의된 asynchronous sequences를 사용합니다.
 
-* Swift translates an Obj-C method that delivers its results asynchronously via a completion handler into an async method that directly returns the result (or throws). (78028295)
+* Swift는 completion handler를 통해 비동기적으로 결과를 전달하는 `Obj-C` 메서드, 결과(또는 throw)를 직접 반환하는 `async` 메서드로 변환합니다. (78028295)
 
-  For example, Swift translates the following Objective-C method from CloudKit:
+  For example, Swift는 CloudKit에서 다음 Objective-C 메소드를 번역합니다.:
   ```objectivec
   - (void)fetchShareParticipantWithUserRecordID:(CKRecordID *)userRecordID
     completionHandler:(void (^)(CKShareParticipant * _Nullable, NSError * _Nullable))completionHandler;
   ```
   <br/>
-  into an async throws method that returns the participant instance:
+  async throws 방식으로 변환하여 participant instance로 반환합니다:
   ```swift
   func fetchShareParticipant(
     withUserRecordID userRecordID: CKRecord.ID
   ) async throws -> CKShare.Participant
   ```
   <br/>
-  Swift callers can invoke this async method within an await expression:
+  Swift callers는 `await` 표현식 내에서 `async method`를 호출할 수 있습니다:
   ```swift
   guard let participant = try? await container.fetchShareParticipant(withUserRecordID: user) else {
     return nil
   }
   ```
-* Read-only computed properties and subscripts can now define their get accessor to be async and throws, by writing one or both of those keywords between the get and {. (78029522)
+* Read-only computed properties 및 subscripts는 이제 get과 `{` 사이에 해당 keywords 중 하나 또는 모두 작성하여 `get` 접근자를 `async` 및 `throw`로 정의할 수 있습니다. (78029522)
 
-  Thus, these members can now make asynchronous calls or throw errors in the process of producing a value:
+  따라서 이러한 members는 이제 값을 생성하는 과정에서 비동기식 호출을 하거나 오류를 발생시킬 수 있습니다:
   ```swift
   class BankAccount: FinancialAccount {
     var manager: AccountManager?
@@ -630,7 +628,7 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
   }
   ```
 
-  Accessing these members, like lastTransaction above, requires appropriate marking with await or try:
+  위의 `lastTransaction`과 같이 이러한 members에 액세스하려면 await 또는 `try`로 적절한 표시가 필요합니다.:
   ```swift
   extension BankAccount {
     func meetsTransactionLimit(_ limit: Amount) async -> Bool {
@@ -644,9 +642,9 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
     //            ^~~~~~~~~ this access is async
   }
   ```
-* #if ... #endif can now surround explicit member expression suffixes. (51690082)
+* `#if ... #endif`는 이제 명시적 멤버 표현식 접미사를 둘러쌀 수 있습니다. (51690082)
 
-  For example, the following code is now valid:
+  For example, 다음 코드는 이제 유효합니다:
   ```swift
   VStack {
     TextField("email address", text: $emailAddress)
@@ -656,9 +654,9 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
       .disableAutocorrection(true)
   }
   ```
-* Improved performance of overload resolution for generic operators, resulting in fewer “too complex to type check in reasonable time” errors in operator expressions. (65007946)
+* 일반 연산자에 대한 오버로드 해결 성능이 향상되어 연산자 식에서 "too complex to type check in reasonable time" 오류가 줄어듭니다. (65007946)
 
-* You can now apply property wrappers to function and closure parameters. (SE-0293, 66866426, 78029226)
+* 이제 function 및 closure parameters에 property wrappers를 적용할 수 있습니다. (SE-0293, 66866426, 78029226)
 
   For example:
   ```swift
@@ -684,15 +682,15 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
   let projection = Wrapper(wrappedValue: 10)
   test($value: projection)
   ```
-  The call site can pass a wrapped value or a projected value, initializing the property wrapper using init(wrappedValue:) or init(projectedValue:), respectively.
+  각각 `init(wrappedValue:)` 또는 `init(projectedValue:)`를 사용하여 property wrapper를 초기화하여 wrapped value 또는 projected value을 전달할 수 있습니다.
 
-* The Swift compiler’s incremental build mode now considers fine-grained dependency information embedded directly into imported Swift modules. This dramatically improves the rebuild time of large projects with many modules by reducing the number of files that rebuild, even across import boundaries. (69595010)
+* 이제 Swift 컴파일러의 incremental build mode는 가져온 Swift 모듈에 직접 포함된 세분화된 dependency 정보를 고려합니다. 이렇게 하면  import boundaries를 넘더라도 다시 빌드하는 파일 수를 줄임으로써 모듈이 많은 대규모 프로젝트의 rebuild 시간이 크게 단축됩니다. (69595010)
 
-* Xcode has a new Optimize Object Lifetimes build setting, under Swift Compiler - Code Generation. Enabling this performs more aggressive ARC optimization and shortens object lifetimes, which can help reduce the memory your app uses. This option also helps you find bugs where code makes invalid assumptions about object lifetimes. (73894256, 76671692)
+* Xcode에는 Swift Compiler - Code Generation 아래에 새로운 Optimize Object Lifetimes 빌드 설정이 있습니다. 이를 활성화하면 보다 적극적인 ARC optimization가 수행되고 object lifetimes가 단축되어 앱에서 사용하는 메모리를 줄이는 데 도움이 될 수 있습니다. 이 옵션은 코드가 object lifetimes에 대해 잘못된 추론을 하는 버그를 찾는 데도 도움이 됩니다. (73894256, 76671692)
 
-* The lazy keyword now works in local contexts. (78028578)
+* lazy keyword는 이제 local contexts에서 작동합니다. (78028578)
 
-  For example, the following code is now valid:
+  For example, 다음 코드는 이제 유효합니다:
   ```swift
   func test(useIt: Bool) {
     lazy var result = getPotentiallyExpensiveResult()
@@ -701,7 +699,7 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
     }
   }
   ```
-* Whenever a reference to Self doesn’t impede the usage of a protocol as a value type, or a protocol member on a value of protocol type, the same is now true for references to [Self] and [Key : Self]. (78028842)
+* Self에 대한 reference가 protocol as a value type으로 프로토콜 사용이 매번 지연되지 않은 경우, 또는 프로토콜 유형 값의 프로토콜 member인 경우 [Self] 및 [Key : Self]에 대한 참조는 이제 같습니다. (78028842)
 
   For example:
   ```swift
@@ -715,7 +713,7 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
     let copies: [Copyable] = c.copy(count: 5) // also OK
   }
   ```
-* It is now possible to use leading-dot syntax in generic contexts to access static members of protocol extensions where Self is constrained to a fully concrete type. (78029041)
+* 이제 Self가 완전히 generic contexts으로 제한되는 protocol extensions where `Self`의 static members에 액세스하기 위해 generic contexts에서 leading-dot 구문을 사용할 수 있습니다. (78029041)
 
   For example:
   ```swift
@@ -733,27 +731,27 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
   
   Toggle(...).applyToggle(.default)
   ```
-* Swift now considers default arguments of Optional type when deciding whether a call to a rethrows function can throw. (78029306)
+* Swift는 이제 `rethrows` 함수에 대한 호출이 throw할 수 있는지 여부를 결정할 때 `Optional` 유형의 기본 arguments를 고려합니다. (78029306)
 
-  In Swift 5.4, such default arguments were ignored entirely by rethrows checking. As a result, the following example was accepted:
+  Swift 5.4에서 이러한 default arguments는 `rethrows` checking에 의해 완전히 무시되었습니다. 결과적으로 다음과 같은 예가 승인되었습니다.:
   ```swift
   func foo(_: (() throws -> ())? = nil) rethrows {}
   foo()  // No 'try' needed.
   ```
   <br/>
-  However, the next example was accepted as well, even though the call to foo() can throw and the call site isn’t marked with try:
+  그러나 Foo()에 대한 호출이 시도될 수 있고 call site에 `try` 표시가 되어 있지 않더라도 다음 예도 승인되었습니다:
   ```swift
   func foo(_: (() throws -> ())? = { throw myError }) rethrows {}
   foo()  // 'try' *should* be required here.
   ```
   <br/>
-  In the new behavior, the first example is accepted because the default argument is syntactically written as nil, which is known not to throw. The second example is correctly rejected because it’s missing a try, since the default argument can throw.
+  새 동작에서 첫 번째 예는 default argument가 구문상 throw되지 않는 것으로 알려진 `nil`로 작성되었기 때문에 허용됩니다. 두 번째 예제는 기본 인수가 throw될 수 있으므로 `try`가 없기 때문에 올바르게 거부되었습니다.
 
-* Swift now supports Task local values. Using the @TaskLocal wrapper API, you can now bind and access values related to a running Task. The values are carried implicitly along with the Task’s execution and are inherited by child tasks. (SE-0311, 78269874)
+* 이제 Swift는 `Task local` value를 지원합니다. `@TaskLocal` wrapper API를 사용하여 이제 실행 중인 `Task`와 관련된 값을 바인딩하고 액세스할 수 있습니다. 값은 작업 실행과 함께 암시적으로 전달되며 child tasks에 상속됩니다. ([<i class="fas fa-link"></i> SE-0311](https://github.com/apple/swift-evolution/blob/main/proposals/0311-task-locals.md){:target="_blank"}, 78269874)
 
-* Swift has significantly restructured the Task API to account for changes to the design in SE-0304. (78269970)
+* Swift는 [<i class="fas fa-link"></i> SE-0304](https://github.com/apple/swift-evolution/blob/main/proposals/0304-structured-concurrency.md){:target="_blank"}의 설계 변경을 고려하여 Task API를 크게 재구성했습니다. (78269970)
 
-* Declarations inside an actor that would normally be actor-isolated can explicitly become non-isolated using the nonisolated keyword. You can use declarations to conform to synchronous protocol requirements. (78331401)
+* 일반적으로 액터로 격리되는 액터 내부의 선언은 `nonisolated` 키워드를 사용하여 명시적으로 non-isolated가 될 수 있습니다. 선언을 사용하여 synchronous protocol requirements을 준수할 수 있습니다. (78331401)
 
   For example:
   ```swift
@@ -767,7 +765,7 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
     }
   }
   ```
-* You can define a type as a global actor. Global actors extend the notion of actor isolation outside of a single actor type, so that global state (and the functions that access it) can benefit from actor isolation, even if the state and functions are scattered across many different types, functions, and modules. Global actors make it possible to safely work with global variables in a concurrent program, as well as modeling other global program constraints such as code that must only execute on the main thread or UI thread. A new global actor can be defined with the globalActor attribute. (79339591)
+* type을 global actor로 정의할 수 있습니다. Global actors는 single actor type 외부로 actor isolation의 개념을 확장하여 상태와 기능이 많은 다른 유형, 기능 및 모듈에 흩어져 있더라도 global state(및 이에 액세스하는 함수)가 행위자 격리로부터 이점을 얻을 수 있도록 합니다. Global actors를 사용하면 concurrent program에서 global variables로 안전하게 작업할 수 있을 뿐만 아니라 main thread 또는 UI thread에서만 실행해야 하는 코드와 같은 다른 전역 프로그램 제약 조건을 모델링할 수 있습니다. `globalActor` 속성으로 새로운 global actor를 정의할 수 있습니다. (79339591)
 
   For example:
   ```swift
@@ -778,7 +776,8 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
     static let shared: ActorType = ActorType()
   }
   ```
-  You can use global actor types as custom attributes on various declarations, which ensures that those declarations are only accessed on the actor described by the global actor’s shared instance. For example:
+  <br/>
+  global actor type을 다양한 선언에서 custom attributes 속성으로 사용할 수 있습니다. 이렇게 하면 해당 선언이 global actor’s `shared` instance에 의해 설명된 actor에서만 액세스할 수 있습니다. For example:
   ```swift
   @DatabaseActor func queryDB(query: Query) throws -> QueryResult
   
@@ -788,7 +787,7 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
   }
   ```
   <br/>
-  The concurrency library defines one global actor, MainActor, which represents the main thread of execution. Use it for any code that must execute on the main thread, e.g., for updating UI.
+  Concurrency library는 실행의 main thread를 나타내는 하나의 global actor인 `MainActor`를 정의합니다. UI 업데이트와 같이 main thread에서 실행해야 하는 모든 코드에 사용합니다.
 
 ### Resolved Issues
 * Fixed an issue where capturing local property wrappers in a closure would result in a compiler error. (74457878)
@@ -1111,7 +1110,7 @@ Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이
   Workaround: Include @MainActor on affected test methods or classes.
 
 
-
+[<i class="fas fa-link"></i> Xcode 13 소개 페이지](https://developer.apple.com/kr/xcode/){:target="_blank"}
 [<i class="fas fa-link"></i> xcode 13.0 whats new
 ](https://developer.apple.com/kr/xcode/whats-new/){:target="_blank"}  
 [<i class="fas fa-link"></i> xcode-13-release-notes
