--- a/clean/think/_posts/2018-09-05-today.md
+++ b/clean/think/_posts/2018-09-05-today.md
@@ -23,15 +23,15 @@ depth:
 마음이 원하는 만큼 가자. 아끼지 말고 가자.<br/><br/>
 또! 오해영 대사 중
 
-나는 드라마에 마음이 갔기 때문에 오늘은 놀았다.
+드라마 참 재밌다. 오늘은 놀자!
 
-## 2. 오늘 하는 일이 재밌었는가? 
+## 오늘 하는 일이 재밌었는가? 
 내가 평소 기대했던 멋진 일이 오늘 할 일은 아닐 수 있다.  
 매일 재미있는 일이 있으면 좋겠으나 그런 일은 드물다.
 
 뜬금 없지만 군대 시절 야간 근무 2시간은 너무 지루했다.
 근무자와는 더 친해졌으나 계속 재미 있을 수는 없는 일이다.
-결과적으로 위병소와 탄약고는 무사했다.
+결과적으로 위병소와 탄약고는 무사했다. 이것도 어떠한 의미가 있었을 것이다.  
 
 재미없는 일을 재미있게 할 필요가 있을까?  
 나는 그럴 필요가 있다고 생각한다.
@@ -39,15 +39,12 @@ depth:
 
 복사 붙여넣기를 수천번 하는 노가다 작업을 했다.
 내가 매크로 프로그램인지 개발을 한건지 모르겠다.
-시간이 지나 노가다의 결과물이 완성되고, 그 작업물을 사용하며 프로그래밍을 이어나갈 때 점점 간결해 지는 코드를 보고 '오호~?' 하는 느낌이 들었다.  
-릴리즈 후 Git PR 의 코드를 보고, 노가다의 결과물을 이용한 코드들을 보면서 성취감과 작은 뿌듯함을 느꼈다.
+그 작업이 완성되어서 노가다의 결과물로 프로그래밍을 이어나갈 때 점점 간결해 지는 코드를 보고 '오호~?' 하는 느낌이 들었다.  
+릴리즈 후 Git PR 의 코드를 보고, 노가다의 결과물을 이용한 코드들을 보면서 성취감과 작은 뿌듯함을 느꼈다.  
 
->오늘 희열 위해 어제 재미가 없었었군!!
+노가다 작업도 지루했지만 결과적으로 더 좋은 결과물을 위한 기계적인 작업이었던 것 같다.
 
-군대에서의 근무도 재미없었지만 나에겐 어떠한 의미가 있었을 것이다.
-노가다 작업도 결과물을 만들어 내기까지의 과정이라 한다면, 사람에게도, 프로젝트에도, 동료에게도 모두에게 가치 있는 일이 아닐까?
-
-## 3. 어제보다 오늘 만든 것이 더 좋은가?
+## 어제보다 오늘 만든 것이 더 좋은가?
 
 평소 작은 부분부터 개선할 수 있는 부분을 찾아 나가는 것은 매우 중요하다고 생각한다.  
 어제보다 오늘 만든 것이 더 좋다면, 어제보다 오늘 더 좋은 개발자가 된거다!  
