--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -69,7 +69,7 @@ Xcode 13에는 iOS 15, iPadOS 15, tvOS 15, watchOS 8 및 macOS Big Sur 11.3용 S
 * Xcode 13의 XIP archive는 이제 동일한 콘텐츠에 대해 약 15% 더 작아졌습니다. archive Utility를 사용하거나 xip command line 에서 archive를 expand 할 수 있습니다. Note: archive를 expanding하는 다른 방법으로 인해 Xcode 앱이 손상될 수 있습니다. (78714333)
 
 ### Resolved Issues
-Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이상 열려 있거나 full-screen mode일 때 예상대로 작동합니다. (72209603) (FB8936285)
+* Xcode의 Keyboard shortcuts는 이제 documentation window에 탭이 두 개 이상 열려 있거나 full-screen mode일 때 예상대로 작동합니다. (72209603) (FB8936285)
 
 ## Apple Clang Compiler
 ### New Features
