--- a/ios/xcode/_posts/2021-10-01-xcode-13.md
+++ b/ios/xcode/_posts/2021-10-01-xcode-13.md
@@ -222,7 +222,7 @@ Xcode 13에는 iOS 15, iPadOS 15, tvOS 15, watchOS 8 및 macOS Big Sur 11.3용 S
 * 이제 CPU Counters template의 안정성과 성능이 향상되었습니다. Instruments 13은 이전 버전의 Instruments로 기록된 Counters traces을 더 이상 지원하지 않습니다. (65812748)
 * leaks command는 `-referenceTree`, `-autoreleasePools` 및 `-debug`의 세 가지 새로운 모드가 있습니다. 자세한 내용은 `man leaks`에 을 찾으세요. (68724178)
 * 이제 Network template에 HTTP traffic을 capturing, analyzing하기 위한 새로운 Instrumen가 포함됩니다. 이 Instrumen는 모든 Apple platforms에서 작동하며 다음을 보여줍니다:
-  * out-of-process background traffic을 포함하여 debuggable processes에 대한 [<i class="fas fa-link"></i> CFNetwork](https://developer.apple.com/documentation/cfnetwork)){:target="_blank"} layer의 HTTP traffic
+  * out-of-process background traffic을 포함하여 debuggable processes에 대한 [<i class="fas fa-link"></i> CFNetwork](https://developer.apple.com/documentation/cfnetwork){:target="_blank"} layer의 HTTP traffic
   * 각 [<i class="fas fa-link"></i>URLSessionTask](https://developer.apple.com/documentation/foundation/urlsessiontask){:target="_blank"}, 기본 HTTP transactions 및 transaction states에 대한 자세한 기간
   * `URLSessionTasks`에 대한 Backtraces는 code에서 task가 어디서 시작되는지 표시
   * HTTP requests, responses의 Headers 및 본문
