[Fix] 문구 수정 NSCache 는 LRU 알고리즘이 아님

--- a/ios/objectivec/nsobject/_posts/2021-10-17-nscache.md
+++ b/ios/objectivec/nsobject/_posts/2021-10-17-nscache.md
@@ -20,7 +20,7 @@ depth:
 mutable Collection 으로 key-value쌍을 임시로 저장하는데 사용된다. 
 
 ## 메모리캐시의 장점
-캐시를 사용하여 비용이 많이 드는 데이터를 LRU 알고리즘으로 메모리 임시로 저장 및 로드 한다.  
+캐시를 사용하여 비용이 많이 드는 데이터를 메모리에 임시로 저장 및 로드 한다.  
 메모리에 저장된 데이터는 접근이 빠르고 다시 계산할 필요가 없어 성능의 이점이 있다.
 
 ## 메모리캐시의 단점
