--- a/git/blog/_posts/2021-08-18-start.md
+++ b/git/blog/_posts/2021-08-18-start.md
@@ -18,6 +18,8 @@ depth:
 ---
 점점 머리가 나빠진다. 나의 경우 글을 작성하고 다시 보고 하면서 반복적으로 봐야 공부가 된다.  
 메모하는 습관을 다시 기르기 위해 2018년 ice bear 테마 Github 블로그를 구축했었으나 테마가 너무 좀.. 그래서.. 새로운 테마로 새롭게 시작하고 싶었다. 그래서 기존 Repo 를 과감하게 제거하고 새로운 테마를 적용하면서 히스토리를 기록하기로 했다.  
+>절대 Repo를 지우지 않는 것을 추천한다.<br/>
+해당 Repo의 잔디는 모두 뿌리가 뽑히게 된다.🙀
 
 추가로 stackoverflow 의 취지가 동기부여 되었다.
 
