[Post] 내용 일부 추가

--- a/swift/collections/_posts/2021-07-23-set.md
+++ b/swift/collections/_posts/2021-07-23-set.md
@@ -16,10 +16,31 @@ depth:
     url: /swift/collections/
     icon: "far fa-folder-open"
 ---
+Set은 정의된 순서 없이 collection에 동일한 Type의 **고유한 값**을 저장한다. 항목의 순서가 중요하지 않거나 항목이 한 번만 표시되도록 해야 하는 경우 array 대신 Set을 사용할 수 있다.
+
+**NOTE:** Swift’s Set type is bridged to Foundation’s NSSet class.<br/><br/>
+For more information about using Set with Foundation and Cocoa, see [<i class="fas fa-link"></i> Bridging Between Set and NSSet](https://developer.apple.com/documentation/swift/set#2845530){:target="_blank"}.
+{: .notice--info}
+
+
 Value type 이다.  
 ```swift
 @frozen public struct Set<Element> where Element : Hashable
 ```
+
+## Hash Values for Set Types
+A type must be hashable in order to be stored in a set—that is, the type must provide a way to compute a hash value for itself. A hash value is an Int value that’s the same for all objects that compare equally, such that if a == b, the hash value of a is equal to the hash value of b.
+
+All of Swift’s basic types (such as String, Int, Double, and Bool) are hashable by default, and can be used as set value types or dictionary key types. Enumeration case values without associated values (as described in [<i class="fas fa-link"></i> Enumerations](https://docs.swift.org/swift-book/LanguageGuide/Enumerations.html){:target="_blank"}) are also hashable by default.
+
+## Set Type Syntax
+The type of a Swift set is written as Set<Element>, where Element is the type that the set is allowed to store. Unlike arrays, sets don’t have an equivalent shorthand form.
+
+## Creating and Initializing an Empty Set
+
+![Image](https://docs.swift.org/swift-book/_images/setVennDiagram_2x.png)
+
+![Image](https://docs.swift.org/swift-book/_images/setEulerDiagram_2x.png)
 
 ## subscript(_:)
 ```
@@ -51,4 +72,5 @@ O(1)
 O(1)
 ```
 ## 출처
-[<i class="fas fa-link"></i> github.com/apple/swift/blob/main/stdlib/public/core/Set](github.com/apple/swift/blob/main/stdlib/public/core/Set.swift){:target="_blank"}
+[<i class="fas fa-link"></i> github.com/apple/swift/blob/main/stdlib/public/core/Set](github.com/apple/swift/blob/main/stdlib/public/core/Set.swift){:target="_blank"}  
+[<i class="fas fa-link"></i> swift.org CollectionTypes](https://docs.swift.org/swift-book/LanguageGuide/CollectionTypes.html){:target="_blank"}
