--- a/ios/objectivec/nsobject/_posts/2021-10-17-nscache.md
+++ b/ios/objectivec/nsobject/_posts/2021-10-17-nscache.md
@@ -8,7 +8,6 @@ toc: true
 toc_sticky: true
 toc_label: 목차
 tag: "NSObject"
-published : false
 depth:
   - title: "iOS"
     url: /ios/
@@ -51,6 +50,7 @@ private class NSCacheEntry<KeyType : AnyObject, ObjectType : AnyObject> {
   
   // Linked List를 사용하여 데이터 추가 및 삭제에 효율적으로 동작한다.
   // 탐색 시간 복잡도: O(n)
+  // 노드가 있기 때문에 데이터의 추가, 삭제로부터 자유롭다.
   var prevByCost: NSCacheEntry?
   var nextByCost: NSCacheEntry?
   init(key: KeyType, value: ObjectType, cost: Int) {
