--- a/clean/dictionary/_posts/2021-10-26-hoisting.md
+++ b/clean/dictionary/_posts/2021-10-26-hoisting.md
@@ -18,7 +18,7 @@ depth:
 var 또는 function declaration 선언들이 제일 위로 올라가는 것  
 코드가 나타나는 순서대로 실행이 된다.
 
->JavaScript is syncronous.<br/>
+>JavaScript engine is syncronous.<br/>
 Execute the code block in order after hoisting.
 
 
