--- a/clean/health/_posts/2021-10-11-no-smoke.md
+++ b/clean/health/_posts/2021-10-11-no-smoke.md
@@ -36,7 +36,7 @@ depth:
 부작용에 대해 검색을 통해 알아본 결과 복용 후 며칠이 지나면 적응하여 매스꺼움 등은 줄어든다고 한다.  
 그래도 심하다면
 - 의사에게 말하고 다시 처방을 받자. 약을 줄이거나 위장약 등 처방해 줄수 있다.
-- 식사 시 함께 약을 먹으면 나야 진다.
+- 식사 시 함께 약을 먹으면 나아 진다.
 
 
 ## 금연 치료
