--- a/clean/health/_posts/2021-10-11-no-smoke.md
+++ b/clean/health/_posts/2021-10-11-no-smoke.md
@@ -54,7 +54,7 @@ depth:
 처음 3일은 금연을 의식하지 않고 마음껏 담배를 피우기로 했다.  
 
 ### 마지막 담배
-불행하게도 마지막 담배를 피울 때 담배에 대한 안좋은 기억으로 남지 않았다.
+불행하게도 마지막 담배를 피울 때 안좋은 기억으로 남지 않았다.
 
 ## 완전히 담배를 끊은 일부터 72시간 버티기
 니코틴은 3일이 지나면 체내에서 모두 제거된다. 이때 금단현상을 참는 것이 어려운데, 극복하기 가장 좋은 방법은 잠을 자는 것이다.
