[Page] Data structure move to cs

--- a/cs/datastructure/_posts/2019-02-17-stack.md
+++ b/cs/datastructure/_posts/2019-02-17-stack.md
@@ -1,19 +1,19 @@
 ---
 sidebar:
-  title: "Algorithm"
-  nav: sidebar-algorithm
-  icon: "fas fa-calculator"
+  title: "CS"
+  nav: sidebar-cs
+  icon: "fas fa-microchip"
 title: "[Swiift] Stack"
 toc: true
 toc_sticky: true
 toc_label: 목차
-tag: "Data Structure"
+tag: "DataStructure"
 depth:
-  - title: "Algorithm"
-    url: /algorithm/
-    icon: "fas fa-calculator"
-  - title: "Data Structure"
-    url: /algorithm/data-structure/
+  - title: "CS"
+    url: /cs/
+    icon: "fas fa-microchip"
+  - title: "DataStructure"
+    url: /cs/datastructure/
     icon: "far fa-folder-open"
 ---
 LIFO 특성을 가지는 자료구조(Data Structure)를 일컫는다.   
