[Style] title 변경

--- a/swift/stringprotocol/_posts/2019-09-04-compare.md
+++ b/swift/stringprotocol/_posts/2019-09-04-compare.md
@@ -3,7 +3,7 @@ sidebar:
   title: "Swift"
   nav: sidebar-swift
   icon: "fab fa-swift"
-title: "compare(_:)"
+title: "[Swift] StringProtocol.compare(_:)"
 toc: true
 toc_sticky: true
 toc_label: 목차
