--- a/architecture/software-engineering/_posts/2021-11-01-solid.md
+++ b/architecture/software-engineering/_posts/2021-11-01-solid.md
@@ -19,13 +19,18 @@ depth:
 5가지 설계 원칙
 
 ## [SRP] 단일 책임 원칙 - Single Responsibility
+콘웨이(Conway) 법칙에 따름 정리 : 소프트웨어 시스템이 가질 수 있는 최적의 구조는 시스템을 만드는 조직의 사회적 구조에 커다란 영향을 받는다. 따라서 각 소프트웨어 모듈은 변경의 이유가 하나, 단 하나여야만 한다.
 
 ## [OCP] 개방-폐쇄 원칙 - Open-Closed
+1980년대에 버트란트 마이어(Burtand Meyer)에 의해 유명해진 원칙이다. 기존 코드를 수정하기보다는 반드시 새로운 코드를 추가하는 방식으로 시스템의 행위를 변경할 수 있도록 설계해야만 소프트웨어 시스템을 쉽게 변경 할 수 있다는 것이 이 원칙의 요지다.
 
 ## [LSP] 리스코프 치환 원칙 - Liskov Substitution
+1988년 바바라 리스코프(Barbara Liskov)가 정의한, 하위 타입(subtype)에 관한 유명한 원칙이다. 요약하면, 상호 대체 가능한 구성요소를 이용해 소프트웨어의 시스템을 만들 수 있으려면, 이들 구성요소는 반드시 서로 치환 가능해야 한다는 계약을 반드시 지켜야한다.
 
 ## [ISP] 인터페이스 분리 원칙 - Interface Segregation
+이 원칙에 따르면 소프트웨어 설계자는 사용하지 않은 것에 의존하지 않아야 한다.
 
 ## [DIP] 의존 역전 원칙 - Dependency Inversion
+고수준 정책을 구현하는 코드는 저수준 세부사항을 구현하는 코드에 절대로 의존해서는 안 된다. 대신 세부사항이 정책에 의존해야 한다.
 
 
