--- a/ios/uiresponder/uiview/_posts/2021-04-23-draw-rect.md
+++ b/ios/uiresponder/uiview/_posts/2021-04-23-draw-rect.md
@@ -33,7 +33,7 @@ UIGraphicsGetCurrentContext() 를 얻을 수 있다.
 ## 주의: 직접 이 메소드를 호출하면 안된다.
 [<i class="fas fa-link"></i> setNeedsDisplay()](ios/uiresponder/uiview/setNeedsDisplay/) 또는 setNeedsDisplay(_ :) 로 호출하자.  
 
-**draw 메서드 내에서 super 를 호출할 필요는 없다**. 하지만 만약 View 가 다른 View 를 상속하게 된다면, draw 메서드 구현부의 적절한 위치레 super를 호출해주어야 한다.
+**draw 메서드 내에서 super 를 호출할 필요는 없다**. 하지만 만약 View 가 다른 View 를 상속하게 된다면, draw 메서드 구현부의 적절한 위치에 super를 호출해주어야 한다.
 
 
 ## 출처
