[Post] update NSCache

--- a/ios/objectivec/nsobject/_posts/2021-10-17-nscache.md
+++ b/ios/objectivec/nsobject/_posts/2021-10-17-nscache.md
@@ -32,6 +32,25 @@ NSCache는 자체적으로 시스템 메모리를 너무 많이 사용하지 않
 객체와 달리 캐시는 저장된 key 객체를 복사하지 않는 특징이 존재  
 디폴트로 캐시 객체는 컨텐츠가 삭제되면 자동으로 제거 (변경 가능)
 
+## Header의 정책
+NSURLCache는 'Cache-Control' HTTP-Header 가 결정한다.  
+
+[<i class="fas fa-link"></i> HTTP-Header에 설정가능한 케쉬 관련 표준](https://developer.mozilla.org/ko/docs/Web/HTTP/Headers/Cache-Control){:target="_blank"}  
+[<i class="fas fa-link"></i> NSURLCacheStoragePolicy](https://developer.apple.com/documentation/foundation/nsurlcachestoragepolicy){:target="_blank"}  
+
+## 캐싱 막기
+캐싱을 끄기 위해서, 다음의 디렉티브들을 보낼 수 있다.
+
+```
+Cache-Control: no-cache, no-store, must-revalidate
+```
+
+## 정적 에셋 캐싱
+변경되지 않을 애플리케이션 내 파일들에 대해, 보통 적극적인 캐싱을 추가할 수 있다. 이것은 예를 들자면, 이미지, CSS 파일 그리고 자바스크립트 파일과 같이 애플리케이션에 의해 서브되는 정적 파일들을 포함한다. 
+```
+Cache-Control:public, max-age=31536000
+```
+추가로, Expires 헤더를 참고하자.
 
 ## Source
 ```swift
