--- a/cs/database/_posts/2021-12-19-insert-1366-error.md
+++ b/cs/database/_posts/2021-12-19-insert-1366-error.md
@@ -26,4 +26,4 @@ CREATE TABLE name(
 ) DEFAULT CHARSET=utf8
 ```
 
-`DEFAULT CHARSET=utf8` 을 TABLE 에 추가하도록 하자.
+`DEFAULT CHARSET=utf8` 을 TABLE 에 추가하면 해결된다.
