--- a/ios/_posts/2022-01-07-sns-login.md
+++ b/ios/_posts/2022-01-07-sns-login.md
@@ -3,7 +3,7 @@ sidebar:
   title: "iOS"
   nav: sidebar-ios
   icon: "fab fa-app-store-ios"
-title: "SNS 로그인 연동 개발"
+title: "[iOS] SNS 로그인 연동 개발"
 toc: true
 toc_sticky: true
 toc_label: 목차
