[Post] collectionview 추가

--- a/ios/_posts/2022-01-07-sns-login.md
+++ b/ios/_posts/2022-01-07-sns-login.md
@@ -7,6 +7,7 @@ title: "[iOS] SNS 로그인 연동 개발"
 toc: true
 toc_sticky: true
 toc_label: 목차
+published : false
 depth: 
   - title: "iOS"
     url: /ios/
