--- a/swift/locale/_posts/2022-01-19-is24hour.md
+++ b/swift/locale/_posts/2022-01-19-is24hour.md
@@ -19,6 +19,8 @@ depth:
 Device - 설정 - 날짜 및 시간에 설정에 따라 Date를 보여줘야하는 요구사항을 받았다.  
 검색해서 찾아본 결과 Locale을 사용해서 구분이 가능하다.
 
+![Image](https://drive.google.com/uc?export=view&id=1KicWMK-hpJ_DVxi_Mk4X1nvDi1BOOako)
+
 ```swift
 static func is24Hour() -> Bool { 
   let locale = Locale.current 
