[Post] 유튜브 구독자 100명 쓰기 중

--- a/it/youtube/_posts/2022-01-23-subscribe-100.md
+++ b/it/youtube/_posts/2022-01-23-subscribe-100.md
@@ -12,10 +12,9 @@ header:
   overlay_color: "#000"
   overlay_filter: "0.5"
   overlay_image: https://drive.google.com/uc?export=view&id=1590Tc5RVGa4XGUOcu7sWUuXurqT8ekvW
-  caption: "Photo credit: [**똘이TV**](https://www.youtube.com/channel/UClFZ-sHYVl2kgR-2o2E2mPQ)"
 excerpt: "초보 유튜버의 기록"
 ---
-유튜브를 시작한지 19일 되었다. 필자는 아주 초보 유튜버이다.  
+2022년 1월 5일 첫 영상을 업로드 했따. 유튜브를 시작한지 19일 되었다. 필자는 아주 초보 유튜버이다.  
 2주만에 유튜브 구독자 100명을 달성하여 너무 기쁘고, 구독자 분들에게 감사한 마음을 기록을 담으려고 한다.  
 필자는 절대로 자랑하려고, 내 채널을 홍보하려고 쓰는 글이 아님을 미리 밝힌다.  
 
@@ -26,7 +25,19 @@ excerpt: "초보 유튜버의 기록"
 필자는 유튜브를 시작하고 구독자 100명을 어떻게 모을 수 있는지, 구글 검색, 유튜브 검색을 통해 여러 정보를 보았다.  
 너무 까마득 했기 때문이다.
 
-## 초기 구독자는 가족이다.
+## 소중한 구독자
+-- 쓰자
+![Image](https://drive.google.com/uc?export=view&id=1jomp5IozxveczL3RxPhDPWSVTxqeXzl9)
+
+![Image](https://drive.google.com/uc?export=view&id=1fKGlw6-beXbmKDEZlutMOBXhySuBH8OJ)
+
+![Image](https://drive.google.com/uc?export=view&id=1RLIicTPUelQIE_OBvW4qAInChdoV6lxf)
+
+![Image](https://drive.google.com/uc?export=view&id=166dwDTecWVrcLmSiyYct90C67i_HVFeN)
+
+![Image](https://drive.google.com/uc?export=view&id=1aD4IZRkdpjeUFdXbQdj2y9LwnLTYTRvg)
+
+### 초기 구독자는 가족이다.
 초기 구독자는 매우 중요하다. 필자 채널 또한 초기 구독자는 가족이다.  
 
 구독자 모으는 방법 등을 보면 지인들은 좋지 않은 구독자이며, 구글 알고리즘을 망친다고 한다. 그것은 맞을수도, 틀릴수도 있는 말이다. 내가 하는 게임을 컨텐츠로 하는 채널이라면, 게임에 관심없는 친구의 구독은 의미가 없을 수 있다. 하지만 사랑하는 가족이라면 내가 좋아하는 것을 좋아해 줄 수 있다. 왜 초기 구독자가 중요한가? 에 대한 필자의 답은 이렇다.
@@ -36,6 +47,10 @@ excerpt: "초보 유튜버의 기록"
 구독자 1명, 4명, 9명 등 조금씩 성장하고 조회수가 늘어나고, 댓글이 어쩌다 하나라도 달려야 재미를 느끼고 더 열심히 할 수 있다. 아무도 보지 않는다면 외롭고 힘들고 지칠 것이다.  
 
 초기 구독자인 가족이 멘탈관리에 든든한 지원이 될 것이며, 가족이 바로 내 채널을 볼 수 있기 때문에, 영상 제작에 더 열심히 할 수 있다.
+
+### 시청자와의 소통
+
+## 꾸준함
 
 ## 멘탈.
 유튜브 초기에는 멘탈이 정말 정말 아주 아주 중요하다.
@@ -50,40 +65,58 @@ excerpt: "초보 유튜버의 기록"
 알고리즘은 좋은 컨텐츠를 알아볼 수 있는 능력이 있고 대단함을 느꼈다.
 좋은 컨텐츠라면 반드시 구글 알고리즘이 많은 사람에게 추천해 줄 것이다.
 
+### 편집 툴
+
+## Shorts
+-- 쓰자
+
+## 목표
+-- 쓰지
+엄마는 처음이라.
+초음파 아기,
+아기 인터뷰,
+아기 서로서로 퀴즈
+인물퀴즈
+
+
 ## 꾸미자
 다른 유튜버의 정보에서 많이 공감한 것인데, 채널을 꾸며야 한다. 다른 사람이 봤을 때 이 채널은 `뭐가 있긴 있네?` 하는 정도로 꾸며야 한다. 
 ### 영상을 늘리자.
  
 ### 베너를 꾸미자.
+-- 쓰자
 ![Image](https://drive.google.com/uc?export=view&id=1CPajywCH5HJyFJEzWspYDDEVR2w_x25L)
  
 ### 아이콘을 꾸미자.
+-- 쓰자
 ![Image](https://drive.google.com/uc?export=view&id=19gvwd071-uo2Fre7I5eIzJzUpYsybZ4x)
  
 ### 미리보기를 꾸미자.
 ![Image](https://drive.google.com/uc?export=view&id=11J01XTqgtnJ3-dbeCYoJj2l2z50hmLkd)  
 어떤 미리보기가 눈에 띄는가? 필자의 유튜브 메인 페이지다. 식당에 가면 맛있는 메뉴판을 보는 듯 하다. 시청자분들도 어떤 영상을 볼지 이리저리 눈에 띄는 것을 먼저 볼 것이다. 
+-- 쓰자
 
 ## 타사와 연동하자.
 ### 인스타그램
+-- 쓰자
 ![Image](https://drive.google.com/uc?export=view&id=1m09JV9mZ8kogqPdCDx0rDd3G0KethsEp)
 ### 틱톡
+-- 쓰자
 ![Image](https://drive.google.com/uc?export=view&id=12c8hjDL_y1YsiStbQZiyUKwOfk7SeQqa)  
+-- 쓰자
 ![Image](https://drive.google.com/uc?export=view&id=1vwg1hqHuGGqX3iYYpkfcZL50WjOwQ2Aq)
 
-## 소중한 구독자
-![Image](https://drive.google.com/uc?export=view&id=1jomp5IozxveczL3RxPhDPWSVTxqeXzl9)
 
-![Image](https://drive.google.com/uc?export=view&id=1fKGlw6-beXbmKDEZlutMOBXhySuBH8OJ)
-
-![Image](https://drive.google.com/uc?export=view&id=1RLIicTPUelQIE_OBvW4qAInChdoV6lxf)
-
-![Image](https://drive.google.com/uc?export=view&id=166dwDTecWVrcLmSiyYct90C67i_HVFeN)
-
-![Image](https://drive.google.com/uc?export=view&id=1aD4IZRkdpjeUFdXbQdj2y9LwnLTYTRvg)
+## 첫 영상
 
 
+## 공개 상태 - 예약됨
 
+## 시간, 요일의 전략
+
+## 제목을 잘 짓자. - 표본이론
+
+## 홍보는 조심히.
 
 
 ## 분석
